syntax = "proto3";

package google.crypto.tink;

option go_package = "github.com/dellekappa/kcms-go/crypto/tinkcrypto/primitive/proto/aes_cbc_go_proto";

message AesCbcKeyFormat {
  uint32 key_size = 1;
}

message AesCbcKey {
  uint32 version = 1;
  bytes key_value = 2;
}