syntax = "proto3";

package google.crypto.tink;

import "proto/aes_cbc.proto";
import "proto/hmac.proto";

option go_package = "github.com/dellekappa/kcms-go/crypto/tinkcrypto/primitive/proto/aes_cbc_hmac_aead_go_proto";

message AesCbcHmacAeadKeyFormat {
    AesCbcKeyFormat aes_cbc_key_format = 1;
    HmacKeyFormat hmac_key_format = 2;
}

message AesCbcHmacAeadKey {
  uint32 version = 1;
  AesCbcKey aes_cbc_key = 2;
  HmacKey hmac_key = 3;
}